--- a/20_technical.tex
+++ b/20_technical.tex
@@ -15,7 +15,7 @@ The eponymous task of a Web server is to serve Web-connected clients over the me
 Originally, the Web was intended to be a network of interconnected text files, which later were augmented with images and custom styles; Web servers were basically required to understand incoming requests and respond by sending static content back to the client \cite{http}. With the upcoming of\textit{CGI}\footnote{Common Gateway Interface, an interface used to connect the Web server and the actual generated content.} during the early 1990s, webpages that are prepared by the server based on dynamic data -- like database content or user input were made possible. With the release of \textit{PHP}\footnote{Recursive acronym: PHP Hypertext Preprocessor, \url{http://php.net/}}, \textit{ASP}\footnote{Active Server Pages, \url{http://msdn.microsoft.com/en-us/library/aa286483.aspx}} and \textit{Java}\footnote{\url{https://www.java.com/}} in 1995, 1996 and 1997, respectively, dynamic webpages became widespread \cite{webhistory}. From that point on, Web servers needed more processing capabilities for script execution and database access; however, the number of requests per client remained roughly the same \cite{webhistory}.
 
 \subsection{Asynchronous Requests}
-The advent of \textit{AJAX}\footnote{Asynchrounous JavaScript and XML (Extensible Markup Language)} and \textit{Web 2.0}\footnote{A term used to describe the upcoming of dynamic, application-like webpages, often combined with the ability of the users to create and share content.} in the late 2000's changed requirements drastically. Rather than requiring to refresh the whole view for every piece of information sent and received, data could now be transferred programmatically in the background. By asynchronously communicating with an API\footnote{Application Programming Interface, an interface for connecting different applications at code-level.} endpoint, operations like deleting an item from a list could be performed ubiquitously without reloading the page context. Especially applications that aim to provide desktop-like behaviour and capabilities -- commonly called Rich Internet Applications -- make heavy use of asynchronous requests \cite[p. 4]{Sencha2011}. Users' expectations for websites changed from anticipating a certain amount of load time to implicating real-time behaviour; to achieve this while maintaining client-server information consistency, latency time must be kept to a minimum. Thus, the server's performance had to meet the combined request frequency of all clients and respond as fast as possible \cite{Garrett2005}.
+The advent of \textit{AJAX}\footnote{Asynchronous JavaScript and XML (Extensible Markup Language)} and \textit{Web 2.0}\footnote{A term used to describe the upcoming of dynamic, application-like webpages, often combined with the ability of the users to create and share content.} in the late 2000's changed requirements drastically. Rather than requiring to refresh the whole view for every piece of information sent and received, data could now be transferred programmatically in the background. By asynchronously communicating with an API\footnote{Application Programming Interface, an interface for connecting different applications at code-level.} endpoint, operations like deleting an item from a list could be performed ubiquitously without reloading the page context. Especially applications that aim to provide desktop-like behaviour and capabilities -- commonly called Rich Internet Applications -- make heavy use of asynchronous requests \cite[p. 4]{Sencha2011}. Users' expectations for websites changed from anticipating a certain amount of load time to implicating real-time behaviour; to achieve this while maintaining client-server information consistency, latency time must be kept to a minimum. Thus, the server's performance had to meet the combined request frequency of all clients and respond as fast as possible \cite{Garrett2005}.
 
 \subsection{Request Frequency and Response Time}
 \label{lab:frequency}
@@ -32,9 +32,10 @@ Correlation between request frequency and response time in a typical Web server 
 \end{figure}
 
 \subsection{Scalability}
+\label{lab:scalabilty}
 Demands on Web servers typically are lower during the initial phase of a business and grow with the popularity of the service. Since business growth and server load can not be exactly predicted, it is necessary to be able to adjust (i.e. \textit{scale}) the entire server architecture according to current needs in a timely manner. The \textit{Slashdot Effect} describes a sudden rise or spike in service popularity and can -- due to the open nature of the Web -- lead to a tremendous increase in activity over a relatively short timespan \cite[p. 1]{Drolia2010}. 
 
-Today's hardware is well suited to meet high demands and can be configured flexibly: If a larger number of physical server units as well as the necessary infrastructure is available, requests can be distributed across different systems and the load a single unit has to handle decreases; this is described as \textit{scaling out}. If single units are outfitted with more memory and faster processors, i.e. \textit{scaled up}, the number of request operations one unit can process increases. Since acquiring and maintaining server units and other infrastructure components is expensive, well-designed software can make a significant difference in system efficiency, which in turn can greatly benefit any business -- especially with the \textit{pay-what-you-use} model modern service providers offer\footnote{So-called \textit{Cloud} service provider often offer flexible plans on processing power, that can be dynamically adjusted without significant server down-time.} \cite[p. 11]{Hughes-Croucher2012}. Software that is well-suited to be expanded according to its usage is considered \textit{elastic} \cite{reactive}.
+Today's hardware is well suited to meet high demands and can be configured flexibly: If a larger number of physical server units as well as the necessary infrastructure is available, requests can be distributed across different systems and the load a single unit has to handle decreases; this is described as \textit{scaling out}. If single units are outfitted with more memory and faster processors, i.e. \textit{scaled up}, the number of request operations one unit can process increases. Since acquiring and maintaining server units and other infrastructure components is expensive, well-designed software can make a significant difference in system efficiency, which in turn can greatly benefit any business -- especially with the \textit{pay-what-you-use} model modern service providers offer\footnote{So-called \textit{Cloud} service providers often offer flexible plans on processing power, that can be dynamically adjusted without significant server down-time.} \cite[p. 11]{Hughes-Croucher2012}. Software that is well-suited to be expanded according to its usage is considered \textit{elastic} \cite{reactive}.
 
 Ideally, the server software should be hardware agnostic, i.e. should behave consistently independent of the hardware it runs on. For instance, if the software depends heavily on sharing application state via RAM\footnote{Random Access Memory}, scaling out on more than one machine will be unsuccessful \cite{Veal2007}. Scalability can be measured by the relationship between hardware resources and the increase of performance. If this relationship is nearly linear, the system is considered to scale well.
 
@@ -217,7 +218,7 @@ Furthermore, due to the fact that every stage has its own thread pool, context s
 In an actor-based architecture, \textit{actors} are the universal primitive of concurrent processing. An actor is an isolated (i.e. self-contained) entity that executes program logic. Actors can communicate with each other via asynchronous messages that can contain arbitrary data and a reference to the sender. Based on the nature of the received message, the actor can execute side-effect-logic like writing a file to disk, but can also send messages to other actors -- including the original sender. Actor-based architectures are similar to event-based architectures in the sense that both implement communication via message passing. The concept of a direct response like in all aforementioned architectural patterns -- be it via a call stack or a callback handler -- becomes irrelevant \cite{Haller2006}. 
 
 \subsubsection*{Flow of Control}
-Event-based architectures work by the principle of \textit{inversion of control} (see section \ref{lab:events}), which is a necessity given the intrinsic mechanisms of events. However, this limits the clearly defined structure of the program code and tends to be less idiomatic in nature. Message passing between actors, on the other hand, does not rely on inversion of control \cite{Haller2006}. Control remains solely with the sending actor, since it can decide, to whom -- if at all -- to send further messages (see figure \ref{fig:actor_flow}). This aids in reduced complexity when designing concurrent programs. Seen in this perspective, actor-based architectures can be seen as a compromise between thread- and event-based architectures.
+Event-based architectures work by the principle of \textit{inversion of control} (see section \ref{lab:events}), which is a necessity given the intrinsic mechanisms of events. However, this limits the clearly defined structure of the program code and tends to be less idiomatic in nature. Message passing between actors, on the other hand, does not rely on inversion of control \cite{Haller2006}. Control remains solely with the sending actor, since it can decide, to whom -- if at all -- to send further messages (see figure \ref{fig:actor_flow}). This aids in reduced complexity when designing concurrent programs. In this perspective, actor-based architectures can be seen as a compromise between thread- and event-based architectures.
 
 Another aspect of actor-based program flow is that the loose coupling introduced by events is further extended. Instead of memorising references to the callee function, actors have the choice of sending a message back in order to create symmetric communication. Furthermore, an actor's internal state can only change in response to incoming messages -- there is no way of modifying actor state directly via methods or variables \cite[p. 38]{Haller2011}. This simple fact has great implications on state management across the application; this architectural characteristic is known as \textit{share-nothing} architecture \cite[p. 3]{Bonetta}.
 
