--- a/30_stateoftheart.tex
+++ b/30_stateoftheart.tex
@@ -2,7 +2,7 @@
 \label{lab:sota}
 As already mentioned in section \ref{sec:terms}, \textit{Development}, developing software is greatly facilitated using existing building blocks instead of writing the entirety of program code from scratch. Especially Web server applications benefit from \textit{frameworks} -- i.e. third-party software that can be extended with application-specific code -- because frameworks generally provide support for standard, repetitive procedures like handling network communication, database access, caching\footnote{The \textit{cache} is mainly short-lived memory used for faster delivery of dynamic data.} and URL mapping\footnote{URL mapping is the process of deciding which action should be taken based on the requested network URL.}. The process of minimising repetitive code and maximising code reusability can be described as reducing \textit{boilerplate code} or by the acronym \textit{DRY}\footnote{Don't repeat yourself} \cite[p. 149]{Scala} \cite[p. 1]{Orsini2008}.
 
-On the other hand, modern Web frameworks often include ways of abstracting concurrency or build on existing concurrency frameworks themselves. This can save the developer from having to deal with low-level concerns like thread scheduling and message passing (see section \ref{sec:threads} and \ref{lab:actormodel}, respectively). \textit{Full-stack} Web frameworks often handle many -- if not all -- tasks common to specific networking applications. They may even include their own Web server to improve the handling of numerous concurrent requests. Inbound and outbound network communication represents a large share of common features. Also, served assets like websites and images play a role in certain use-cases (but do not in case of a purely API-focussed server). Storage in form of cache and data persistence is also important for most applications. However, asynchronous I/O and Event- and Actor-based interfaces are the main focus of this chapter. Figure \ref{fig:full_stack} gives a brief overview of typical full-stack framework capabilities. 
+Modern Web frameworks often include ways of abstracting concurrency or build on existing concurrency frameworks themselves. This can save the developer from having to deal with low-level concerns like thread scheduling and message passing (see section \ref{sec:threads} and \ref{lab:actormodel}, respectively). \textit{Full-stack} Web frameworks often handle many -- if not all -- tasks common to specific networking applications. They may even include their own Web server to improve the handling of numerous concurrent requests. Inbound and outbound network communication represents a large share of common features. Also, served assets like websites and images play a role in certain use-cases (but do not in case of a purely API-focussed server). Storage in form of cache and data persistence is also important for most applications. However, asynchronous I/O and Event- and Actor-based interfaces are the main focus of this chapter. Figure \ref{fig:full_stack} gives a brief overview of typical full-stack framework capabilities. 
 
 \begin{figure}
 \centering\small
@@ -14,29 +14,30 @@ A Web framework aims to facilitate development by including frequently used capa
 \label{fig:full_stack}
 \end{figure}
 
-This chapter presents selected approaches to performance-critical event-based and actor-based concurrency abstraction with respect to the criteria defined in section \ref{sec:terms} and taking into account the technical issues elaborated in section \ref{sec:concurrency}.
+This chapter presents selected approaches to performance-critical event-based and actor-based concurrency abstraction with respect to the criteria defined in section \ref{sec:terms} and taking into account the technical issues elaborated in section \ref{sec:concurrency}. The respective technologies were chosen according to their current relevancy and popularity in the current technological background and ordered with regard to their applicability in the context of this thesis.
 
 \section{Event-based technologies}
 \label{sec:evnt}
+
 \subsection{Node.js}
 \label{sec:nodejs}
 
-\textit{Node.js}\footnote{\url{http://nodejs.org/}} is not only a framework, but rather a dedicated open source software platform for purely event-driven applications. User-level code is written in the \textit{JavaScript} scripting language and interpreted by the \textit{V8}\footnote{\url{https://code.google.com/p/v8/}} engine also used in the \textit{Google Chrome}\footnote{\url{https://www.google.com/intl/en/chrome/browser/}} Web browser \cite[p. 19]{Hughes-Croucher2012}. This is reasonable since \textit{JavaScript} was originally used primarily for programming client-side website behaviour; however, \textit{Node.js} uses a module system\footnote{Using the \textit{CommonJS} module specification (\url{http://www.commonjs.org/})} to add various Web server-specific features. These features include -- among others -- networking abstractions, file and operating system abstractions and replication and scheduling utilities\footnote{See \url{http://nodejs.org/api/} for an exhaustive list of system modules or \url{https://www.npmjs.org/} for a popular extension module repository.}. The platform also includes its own Web server via the \texttt{http} module.
+\textit{Node.js}\footnote{\url{http://nodejs.org/}} is not only a framework, but rather a dedicated open source software platform for purely event-driven applications. User-level code is written in the \textit{JavaScript} scripting language and interpreted by the \textit{V8}\footnote{\url{https://code.google.com/p/v8/}} engine also used in the \textit{Google Chrome} Web browser\footnote{\url{https://www.google.com/intl/en/chrome/browser/}} \cite[p. 19]{Hughes-Croucher2012}. \textit{JavaScript} was originally used primarily for programming client-side website behaviour; however, \textit{Node.js} uses a module system\footnote{Using the \textit{CommonJS} module specification (\url{http://www.commonjs.org/})} to add various Web server-specific features. These features include -- among others -- networking abstractions, file and operating system abstractions and replication and scheduling utilities\footnote{See \url{http://nodejs.org/api/} for an exhaustive list of system modules or \url{https://www.npmjs.org/} for a popular extension module repository.}. The platform also includes its own Web server via the \texttt{http} module\footnote{\url{http://nodejs.org/api/http.html}}.
 
 \subsubsection*{Development}
 \label{lab:nodehttp}
 Program modules are represented by \textit{JavaScript} files. The entry point of a program must be defined by specifying the main \textit{JavaScript} file upon application launch \cite[p. 16]{Hughes-Croucher2012}. To use a module, it can be included using the \texttt{require} command. Program flow typically propagates via callbacks (see section \ref{lab:flow}). An example of these concepts can be seen in program \ref{prog:node-http}. Due to the functional nature of \textit{JavaScript}, callback functions can be the main driving force of asynchronous program flow. The following factors support this \cite{node-loop}:
 \begin{itemize}
   \item First-class functions can be handled like any other data type; they can be stored in variables, passed as parameters and executed when needed.
-  \item Functions can be composed of multiple \textit{anonymous} functions, which allows for flexible ordered execution (as seen in program \ref{prog:node-http}).
+  \item Parts of the program flow can be composed of multiple \textit{anonymous} functions, which allows for flexible ordered execution (as seen in program \ref{prog:node-http}).
 \end{itemize}
-\begin{program}  \caption{This example illustrates the concepts introduced at the beginning of section \ref{lab:nodehttp}. In line 1, a HTTP network abstraction is loaded and exported to a variable for later use. Line 2 calls a function on this variable, requesting the creation of a new server instance; this function takes as parameter an \textit{anonymous} callback function (meaning that it is passed directly in form of a function rather than as an assigned variable), which is called upon each incoming HTTP request. The function's two parameters are handles to the HTTP request and response, respectively. Line 3 and 4 generate the response by setting the HTTP status code, the \texttt{Content-Type} header and the response body. The server is started via the function \texttt{listen}, which accepts a network port and IP address. Code source: \cite[p. 9]{Hughes-Croucher2012}}  \label{prog:node-http}  \begin{JavaCode}var http = require('http');
+\begin{program}  \caption{This example illustrates the concepts introduced at the beginning of section \ref{lab:nodehttp}. In line 1, a HTTP network abstraction is loaded and line 2 calls a function that requests the creation of a new server instance; this function receives an \textit{anonymous} callback function, which is called upon each incoming HTTP request. The function's two parameters are the HTTP request and response, respectively. Line 3 and 4 generate the response by setting the HTTP status code, the \texttt{Content-Type} header and the response body. The server is started via the function \texttt{listen}, which accepts a network port and IP address. Code source: \cite[p. 9]{Hughes-Croucher2012}}  \label{prog:node-http}  \begin{JavaCode}var http = require('http');
 http.createServer(function (req, res) {
     res.writeHead(200, {'Content-Type': 'text/plain'}); 
     res.end('Hello World\n');
 }).listen(8124, "127.0.0.1");
 console.log('Server running at http://127.0.0.1:8124/');  \end{JavaCode}\end{program}
-However, there are several caveats to exclusively callback-driven program flow. For one, multiple callbacks executed sequentially are not guaranteed to return in a certain order. There is also no predefined way of awaiting multiple callback results. Also, callbacks -- when used excessively -- tend to lead to quite unreadable code and, ultimately, to a condition known as the \textit{Pyramid of Doom} (see program \ref{prog:doom}).
+However, there are several caveats to exclusively callback-driven program flow. For one, multiple callbacks executed sequentially are not guaranteed to return in order. There is also no predefined way of awaiting multiple callback results. Also, callbacks -- when used excessively -- tend to lead to quite unreadable code and, ultimately, to a condition known as the \textit{Pyramid of Doom} (see program \ref{prog:doom}).
 \begin{program}  \caption{Multiple dependent callback functions can lead to a structure called \textit{Pyramid of Doom}, which can impede code readability. Every step function (i.e. \texttt{step1}, \texttt{step2}, \ldots) asynchronously depends on the result of the previous one. In this example, code indentation tends to increase faster than line progression. Code source: \cite[p. 21]{Torstensson2012}}  \label{prog:doom}  \begin{JavaCode}step1(function (value1) {
     step2(value1, function (value2) {
         step3(value2, function (value3) {
@@ -46,7 +47,7 @@ However, there are several caveats to exclusively callback-driven program flow. 
         });
     });
 });	  \end{JavaCode}\end{program}
-To relieve these problems, the \textit{promise} paradigm can be used as an abstraction for callbacks. With a promise framework like the one included in the popular \textit{jQuery} library\footnote{\url{http://jquery.com/}} or the \textit{Q} library\footnote{\url{https://github.com/kriskowal/q}}, sequential functions can be written more idiomatically as a chain of commands (see program \ref{prog:promises}). When a promise is created, the result is \textit{deferred}, i.e. returned at a later point in time. If the action of the promise was successful, the promise is \textit{resolved}, otherwise it is \textit{rejected}. There is also a comprehension that allows for resolving multiple promises in parallel and treating the results as a single array of values as soon as all promises are resolved:
+To relieve these problems, the \textit{promise} paradigm can be used as an abstraction for callbacks. With a promise framework like the one included in the popular \textit{jQuery} library\footnote{\url{http://jquery.com/}} or the \textit{Q} library\footnote{\url{https://github.com/kriskowal/q}}, sequential functions can be written more idiomatically as a chain of commands (see program \ref{prog:promises}). When a promise is created, the result is \textit{deferred}, i.e. returned at a later point in time. If the action of the promise was successful, the promise is \textit{resolved}, otherwise it is \textit{rejected}. There is also a comprehension (i.e. a specialised syntactic construct) that allows for resolving multiple promises in parallel and treating the results as a single array of values as soon as all promises are resolved:
 
 \begin{JavaCode}
 Q.all([stepA, stepB]).then(function (results) {
@@ -66,7 +67,7 @@ Q.all([stepA, stepB]).then(function (results) {
 })
   \end{JavaCode}\end{program}
 
-Another means of program flow in \textit{JavaScript} is via explicit events. In \textit{Node.js}, this can be conveniently done by using the \texttt{events} module. New events are created and handled by an instance of \texttt{EventEmitter} (see program \ref{prog:emitter}). This way, a very flexible (yet \textit{flat}, see section \ref{lab:flow}) program flow can be realised.
+Another means of program flow in \textit{JavaScript} is via explicit events. In \textit{Node.js}, this can be conveniently done by using the \texttt{events} module\footnote{\url{http://nodejs.org/api/events.html}}. New events are created and handled by an instance of \texttt{EventEmitter} (see program \ref{prog:emitter}). This way, a very flexible (yet \textit{flat}, see section \ref{lab:flow}) program flow can be realised.
 
 \begin{program}  \caption{A simple example of explicit events. First, the emitter created through the \texttt{events} module registers a behaviour (in form of a callback function) for a certain event type (i.e. \texttt{doorOpen}). At an arbitrary point in time an event of this type is created and triggers the callback function. Code source: \cite{Cogneau2013}}  \label{prog:emitter}  \begin{JavaCode}var events = require('events');
 var eventEmitter = new events.EventEmitter();
@@ -89,16 +90,14 @@ async.parallel([
 ], callback);
 \end{JavaCode}
 
-Independently of the exact method of implementing concurrency in \textit{Node.js}, \textit{inversion of control} (see section \ref{lab:events}) plays a big role and its drawbacks (e.g. reduced code readability) are hard to avoid without using special libraries \cite[p. 93]{Erb2012}. However, because \textit{JavaScript} is a very popular language due to its use in website development, the adoption rate and the enthusiasm event of less experienced developers help with building a rich ecosystem around the platform \cite[p. 27]{Hughes-Croucher2012}.
+Independently of the exact method of implementing concurrency in \textit{Node.js}, \textit{inversion of control} (see section \ref{lab:events}) plays a big role and its drawbacks (e.g. reduced code readability) are hard to avoid without using special libraries \cite[p. 93]{Erb2012}. However, because \textit{JavaScript} is a very popular language due to its use in website development, the fast adoption rate and shallow learning curve of \textit{Node.js} help with building a rich ecosystem around the platform \cite[p. 27]{Hughes-Croucher2012}.
 
-\textit{Node.js} applications can also benefit from certain framework modules that add \textit{MVC}\footnote{Model-View-Controller} capabilities. One such module is the \textit{express} framework\footnote{\url{http://expressjs.com/}}, which includes features such as advanced routing and templates and brings \textit{Node.js} one step closer to being a full-stack Web framework (see section \ref{lab:sota}).
+\textit{Node.js} applications can also benefit from certain framework modules that add \textit{MVC}\footnote{Model-View-Controller} capabilities. One such module is the \textit{express} framework\footnote{\url{http://expressjs.com/}}, which includes features such as advanced routing and templates and brings \textit{Node.js} one step closer to being a full-stack Web framework.
 
 \subsubsection*{Scalability}
-In the previous section, methods of implementing asynchronous behaviour in \textit{Node.js} applications were listed. This section aims to explain the implications of executing this applications with regard to the execution environment.
-
 Applications running on \textit{Node.js} per default only use a single thread for processing \cite{node-loop}. As mentioned in the previous chapter, this has a positive effect on scheduling overhead. Because of the nature of \textit{JavaScript} and \textit{Node.js} (e.g. asynchronous networking and file abstractions as well as the use of callbacks), it is comparably easy to write code that does not block the processing thread. However, \textit{if} blocking occurs, the consequence is that the whole application is unable to process any requests until the blocking action has finished. On the other hand, this removes any need for synchronisation concerns and prevents address space conflicts between threads \cite[p. 105]{Erb2012}.
 
-To scale out a \textit{Node.js}-based application, two main steps can be taken: Scaling out only on a single multi-core machine or scaling out on multiple machines. The first can be archived by creating multiple instances of the same program using the \texttt{cluster} module of \textit{Node.js} (see program \ref{prog:cluster}). This way, a master process obtains control over several child processes that handle requests asynchronously based on load balancing \cite[p. 64]{Hughes-Croucher2012}. The technique of having one process create child instances is called forking. If forking is not supported by the operating system (e.g. on \textit{Windows}\footnote{http://windows.microsoft.com/} systems), the application creates multiple threads in the same process. Running the application on multiple servers has no special implications for \textit{Node.js}; if shared state is desired, it has to be archived by a messaging protocol like \textit{pub-sub} \cite[p. 137]{Hughes-Croucher2012}.
+To scale out (see section \ref{lab:scalabilty}) a \textit{Node.js}-based application, two main steps can be taken: Scaling out only on a single multi-core machine or scaling out on multiple machines. The first can be archived by creating multiple instances of the same program using the \texttt{cluster} module\footnote{\url{http://nodejs.org/api/cluster.html}} of \textit{Node.js} (see program \ref{prog:cluster}). This way, a master process obtains control over several child processes that handle requests asynchronously based on load balancing \cite[p. 64]{Hughes-Croucher2012}. The technique of having one process create child instances is called forking. If forking is not supported by the operating system (e.g. on \textit{Windows}\footnote{http://windows.microsoft.com/} systems), the application creates multiple threads in the same process. Running the application on multiple servers has no special implications for \textit{Node.js}; if shared state is desired, it has to be archived by a messaging protocol like \textit{pub-sub} \cite[p. 137]{Hughes-Croucher2012}.
 
 \begin{program}  \caption{The \texttt{cluster} module provides an abstraction of creating multiple instances of a program. The first process executing the code is defined as the master process and all other processes (the number of processes depends on the number of processing cores in the system) are forked as child processes. Code source: \cite{Hughes-Croucher2012}}  \label{prog:cluster}  \begin{JavaCode}var cluster = require('cluster'); 
 var http = require('http');
@@ -120,7 +119,7 @@ if (cluster.isMaster) {
   \end{JavaCode}\end{program}
 
 \subsubsection*{Performance}
-\textit{Node.js} is considered very suitable for massive connection concurrency and data-heavy applications \cite[p. 44]{Torstensson2012}. The \textit{V8} engine executes \textit{JavaScript} code at a very favourable speed; interfaces that often slow down browser-based applications (like the \textit{DOM}(Document Object Model)) are not present in a server-side environment. However, since the code is executed via interpretation, its execution is inherently slower than the execution of binary files or virtual machine bytecode. Figure \ref{fig:node_performance} illustrates the serious implications of intensive computations on response time. 
+\textit{Node.js} is considered very suitable for massive connection concurrency and data-heavy applications \cite[p. 44]{Torstensson2012}. The \textit{V8} engine executes \textit{JavaScript} code at a very favourable speed; interfaces that often slow down browser-based applications (like the \textit{DOM}\footnote{Document Object Model}) are not present in a server-side environment. However, since the code is executed via interpretation, its execution is inherently slower than the execution of binary files or virtual machine bytecode. Figure \ref{fig:node_performance} illustrates the serious implications of intensive computations on response time. 
 
 \begin{figure}
 \centering\small
@@ -134,7 +133,7 @@ In this figure taken from a performance analysis of D. Torstensson and E. Eloff,
 
 \subsection{Eventmachine}
 \label{sec:eventmachine}
-Ruby\footnote{\url{https://www.ruby-lang.org}} is a dynamic programming language that has a high adoption rate due to the popular \textit{Ruby on Rails} MVC framework that powers a lot of modern Websites \cite[p. 11]{Orsini2008}. However, unlike \textit{JavaScript}, \textit{Ruby} was not conceived with non-blocking event-driven behaviour in mind. \textit{Eventmachine} is a library that aims to facilitate the process of developing non-blocking Web server applications in \textit{Ruby}.
+Ruby\footnote{\url{https://www.ruby-lang.org}} is a dynamic programming language that has a high adoption rate due to the popular \textit{Ruby on Rails} MVC framework that powers a lot of modern Websites \cite[p. 11]{Orsini2008}. However, unlike \textit{JavaScript}, \textit{Ruby} was not conceived with non-blocking event-driven behaviour in mind. \textit{Eventmachine}\footnote{\url{http://rubyeventmachine.com/}} is a library that aims to facilitate the process of developing non-blocking Web server applications in \textit{Ruby}.
 
 \subsubsection*{Development}
 As mentioned in section \ref{lab:nodehttp}, \textit{JavaScript} uses anonymous and first-order functions to manage asynchronous program flow. Due to \textit{Ruby's} object-oriented nature, these concepts are not supported at language-level; instead, it supports so-called \textit{blocks} that in some way can act like anonymous functions and receive parameters from previous operations \cite{Fitzgerald2007}. See program \ref{prog:ruby-sync} for a simple demonstration of how blocks can be used to create a basic networking server.
@@ -174,7 +173,7 @@ EventMachine::run {
 \end{itemize}
 Program \ref{prog:ruby-em} demonstrates, how the simple TCP server from program \ref{prog:ruby-sync} can be implemented using the \textit{EventMachine} reactor. Besides this comprehensible TCP communication functionality, \textit{EventMachine} also includes functionality for deferring or postponing program logic. Deferring is important when interacting with code that would normally block the event-loop (see program \ref{prog:ruby-defer}). The \texttt{Timer} class or the \texttt{add\_timer} and \texttt{add\_periodic\_timer} methods can be used to execute program logic at an arbitrary point in time (e.g. for scheduled or recurring tasks). There is also a \texttt{Queue} comprehension for managing multiple asynchronous tasks at once (cf. the \texttt{all} comprehension of the \textit{Q} library in section \ref{lab:nodehttp}). 
 
-\begin{program}  \caption{An example of using \textit{EventMachine} to archieve \textit{JavaScript}-like callback functionality in \textit{Ruby}. A long-running operation can be put in a block, the execution of which is managed by \textit{EventMachine} via its threadpool. After the execution has completed, the result is passed to another block (i.e. the ``callback'') as a parameter.}  \label{prog:ruby-defer}  \begin{JavaCode}
+\begin{program}  \caption{An example of using \textit{EventMachine} to achieve \textit{JavaScript}-like callback functionality in \textit{Ruby}. A long-running operation can be put in a block, the execution of which is managed by \textit{EventMachine} via its threadpool. After the execution has completed, the result is passed to another block (i.e. the ``callback'') as a parameter.}  \label{prog:ruby-defer}  \begin{JavaCode}
 operation = proc {
     # long-running operation, e.g. database query
 }
@@ -185,7 +184,7 @@ callback = proc { |result|
 EventMachine.defer(operation, callback)  \end{JavaCode}\end{program}
 
 \subsubsection*{Scalability and Performance}
-Like \textit{JavaScript}, \textit{Ruby} is an interpreted scripting language and as such performance is inherently inferior to compiled languages\footnote{However, Web servers that focus heavily on I/O-bound operations like network and database communication may not need as much CPU performance as e.g. a server used for image processing.} (see section \ref{sec:nodejs}, \textit{Performance}). When using the default \textit{Ruby} VM\footnote{Virtual Machine, a program that executes code inside a dedicated environment.}, a security measure called \textit{Global Interpreter Lock} prevents program threads from archiving physical concurrency by only executing one logical thread at once (see figure \ref{fig:gil}). This is done to prevent sharing non thread-safe code with other threads \cite{ruby-gil}. Thus, to scale a \textit{Ruby} application running on the default virtual machine, several process instances have to be created. This is similar to \textit{Node.js} and many implications that apply to scaling \textit{Node.js} applications also apply to \textit{Ruby}. \textit{JRuby}\footnote{\url{http://jruby.org/}} is an alternative implementation of the standard \textit{Ruby} interpreter which theoretically allows for controlling physical concurrency at application level \cite{ruby-gil}.
+Like \textit{JavaScript}, \textit{Ruby} is an interpreted scripting language and as such performance is inherently inferior to compiled languages\footnote{However, Web servers that focus heavily on I/O-bound operations like network and database communication may not need as much CPU performance as e.g. a server used for image processing.} (cp. section \ref{sec:nodejs}, \textit{Performance}). When using the default \textit{Ruby} VM\footnote{Virtual Machine, a program that executes code inside a dedicated environment.}, a security measure called \textit{Global Interpreter Lock} prevents program threads from archiving physical concurrency by only executing one logical thread at once (see figure \ref{fig:gil}). This is done to prevent sharing non thread-safe code with other threads \cite{ruby-gil}. Thus, to scale a \textit{Ruby} application running on the default virtual machine, several process instances have to be created. This is similar to \textit{Node.js} and many implications that apply to scaling \textit{Node.js} applications also apply to \textit{Ruby}. \textit{JRuby}\footnote{\url{http://jruby.org/}} is an alternative implementation of the standard \textit{Ruby} interpreter which theoretically allows for controlling physical concurrency at application level \cite{ruby-gil}.
 
 \begin{figure}
 \centering\small
@@ -209,7 +208,7 @@ There are numerous other examples of event-driven concurrency frameworks that ar
 \subsubsection*{Development}
 \textit{Play!} is different from all aforementioned frameworks (see section \ref{sec:evnt}), not only in the sense that it uses actor-based concurrency, but also in that it is based on a compiled programming language rather than an interpreted scripting language. Existing since 2003, \textit{Scala} is a rather young programming language that is syntactically very similar to \textit{Java}, but extends it with functional programming capabilities and a more sophisticated type system. Since it has native support for comprehensions associated with concurrency and a more concise syntax, it is better suited for applications with a high amount of application-level concurrency operations \cite[p. 9]{Scala}; therefore, in this section \textit{Play!}'s functionality is presented using \textit{Scala}.
 
-\textit{Play!} builds upon the MVC\footnote{Model-View-Controller} model, which means that incoming requests are handled by a user-defined controller structure. A controller contains \textit{Actions}, i.e. methods that are called when a certain type of request arrives. Each controller method must return an object of the class \texttt{Result}, which contains the data to be sent back to the client \cite[p. 27]{Reelsen2011}. When defining an action, there are two basic types of actions in terms of concurrency -- synchronous and asynchronous. Asynchronous actions must return an object of the type \texttt{Future[Result]}. A \textit{future} is similar to a \textit{promise} (see section \ref{sec:nodejs}, \textit{Development}) and indicates that the result is not available at the momentary point of execution, but at an arbitrary time in the future; only when the calculation of the result has finished (either successfully or due to failure) the response is sent to the client (see program \ref{prog:scala-actions1} and \ref{prog:scala-actions2}, respectively) \cite[p. 86]{Scala}. 
+\textit{Play!} builds upon the MVC model, which means that incoming requests are handled by a user-defined controller structure. A controller contains \textit{Actions}, i.e. methods that mapped to certain types of requests. Each controller method must return an object of the class \texttt{Result}, which contains the data to be sent back to the client \cite[p. 27]{Reelsen2011}. When defining an action, there are two basic types of actions in terms of concurrency -- synchronous and asynchronous. Asynchronous actions must return an object of the type \texttt{Future[Result]}. A \textit{future} is similar to a \textit{promise} (see section \ref{sec:nodejs}, \textit{Development}) and indicates that the result is not available at the momentary point of execution, but at an arbitrary time in the future; only when the calculation of the result has finished (either successfully or due to failure) the response is sent to the client (see program \ref{prog:scala-actions1} and \ref{prog:scala-actions2}, respectively) \cite[p. 86]{Scala}. 
 
 \begin{program}  \caption{This program contains a very simple demonstration of how application-level code integrates with the \textit{Play!} framework. \texttt{def} defines a new method, which is wrapped by the \texttt{Action} constructor method. The actual method logic is passed to the \texttt{Action} wrapper as a block, which has to return a \texttt{Result} object. The \texttt{Ok} method in line 4 converts a string to a \texttt{Result} object with the HTTP status code 200, indicating a successful operation with a non-empty response.}  \label{prog:scala-actions1}  \begin{JavaCode}
 // Synchronous action
